2020-04-30  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/libpoke.c (pk_compiler_new): Get new arguments term_if and
	term_payload.
	* lib/libpoke.h (pk_term_flush_fn): New type.
	(pk_term_puts_fn): Likewise.
	(pk_term_printf_fn): Likewise.
	(pk_term_class_fn): Likewise.
	(pk_term_end_class_fn): Likewise.
	(pk_term_hyperlink_fn): Likewise.
	(pk_term_end_hyperlink_fn): Likewise.
	* src/pk-term.h: Moved from lib.
	* src/pk-term.c: Likewise.
	* src/Makefile.am (poke_SOURCES): Add pk-term.h and pk-term.c.
	(poke_LDADD): Add libtextstyle.
	* lib/Makefile.am (libpoke_la_LIBADD): Remove libtextstyle.
	* lib/Makefile.am (libpoke_la_SOURCES): Remove pk-term.h and
	pk-term.c.
	(include_HEADERS): Remove pk-term.h.
	* HACKING: Updated to reflect relocated sources.
	* lib/pkt.h: New file.
	* src/pk-cmd.c: Include pk-term.h.
	* src/poke.c: Likewise.
	* src/pk-vm.c: Likewise.
	* src/pk-set.c: Likewise.
	* src/pk-repl.c: Likewise.
	* src/pk-misc.c: Likewise.
	* src/pk-ios.c: Likewise.
	* src/pk-hserver.c: Likewise.
	* src/pk-editor.c: Likewise.
	* src/pk-def.c: Likewise.

2020-04-30  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING: Add lib/libpoke.[ch] to the source tree appendix.

2020-04-29  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/Makefile.am (include_HEADERS): Add missing pk-utils.h and
	pk-term.h.

2020-04-17  Jose E. Marchesi  <jemarch@gnu.org>

	* src/poke.h (poke_compiler): Switch to type pk_compiler.
	(poke_vm): Remove extern.
	Do not include pkl.h.
	Include libpoke.h.

	* src/poke.c (finalize): Use pk_free_compiler.
	(initialize): Use pk_compiler_new.
	(poke_compiler): Switch to type pk_compiler.
	(poke_vm): Remove global.

	* lib/libpoke.h (pk_compiler): New type.
	* lib/libpoke.c (pk_compiler_new): New function.
	(pk_compiler_free): Likewise.

2020-04-15  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/libpoke.h: New file.
	* lib/libpoke.c: Likewise.
	* lib/Makefile.am (include_HEADERS): Distribute libpoke.h.
	(libpoke_la_SOURCES): Add libpoke.h and libpoke.c and remove